--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -192,7 +192,7 @@ padding: 0px;
     margin-top: -2px;
   }
  }
-}
+ }
 }
 
 .searchchat{
@@ -228,6 +228,172 @@ padding: 0px;
     }
   }
 }
+
+
+.callchat{
+  width: 100%;
+  height: 100vh;
+  background-color: #1AC0A3;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  padding-top: 20px;
+  z-index: 8000;
+  font-style: futura;
+  .up{
+      width:100%;
+      display: flex;
+      justify-content: space-between;
+      padding-left: 20px;
+       }
+       .center{
+           top: 0vh;
+           width: 100%;
+           height: 68vh;
+           position: relative;
+           overflow-y: hidden;
+           img{
+               width: 100%;
+               height: 100vh;
+               position: absolute;
+           }
+           i{
+               font-size: 22px;
+               position: absolute;
+               z-index: 6000;
+               background-color: red;
+               width: 60px;
+               height: 60px;
+               border-radius: 100%;
+               display: flex;
+               justify-content: center;
+               align-items: center;
+               top: 50vh;
+               left: 42%;
+               transform: rotate(135deg);
+           }
+       }
+       .down{
+           margin-top: 10px;
+           display: flex;
+           justify-content: space-between;
+           align-items: center;
+           padding: 20px;
+           i{
+               font-size: 22px;
+           }
+       }
+  .fa-angle-down{
+  font-size: 30px;
+  }
+  .host{
+      color: rgb(231, 226, 226);
+      .callee{
+          margin-top: 10px;
+          color: white;
+          font-size: 25px;
+          margin-left: 20px;
+      }
+      .calling{
+          margin-left: 40px;
+          margin-top: -10px;
+      }
+  }
+}
+
+.statt{
+        width: 60px;
+        height: 60px;
+        overflow: hidden;
+        color: white;
+        border-radius: 100%;
+        border: 3px dashed rgb(0, 0, 0) !important;
+  }
+
+  .statusview{
+    position: absolute;
+    top: 0;
+    left: 0px;
+    width: 100%;
+    z-index: 8000;
+    height: 100vh;
+    background-color: black;
+    .ml-2{
+      display: flex;
+      justify-content: space-between;
+      color: white;
+      align-items: center;
+      .picholder{
+          img{
+            width: 40px;
+            height: 40px;
+            border-radius: 100%;
+            margin-left: -10px;
+          }
+        }
+  }
+  }
+  .holdme{
+    width: 100%;
+    height: 70vh;
+    position: absolute;
+    top: 100px;
+    left: 0px;
+    overflow-y: hidden;
+    img{
+      width: 100%;
+      height: 100vh;
+    }
+    .messa{
+      width: 100%;
+      height: 70vh;
+      background-color: red;
+      color: white;
+      font-size: 16px;
+      font-weight: bold;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      align-items: center;
+      justify-content: center;
+      display: flex;
+    }
+  }
+
+  .adjust{
+    margin-right: 20px;
+  }
+   
+  .down{
+    width: 100%;
+    position: absolute;
+    bottom: 1%;
+    .chevup{
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .reply{
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+
+.probar{
+  width: 100%;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  .bar{
+    background-color: white;
+    height: 10px;
+    border-radius: 10px;
+  }
+}
+  
+
 
 
 
