--- a/src/app/newcontact/newcontact.page.scss
+++ b/src/app/newcontact/newcontact.page.scss
@@ -57,5 +57,111 @@
        
     }
 }
+.eachchat{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    border-bottom: 1px solid rgba(0,0, 0, 0.1);
+    .picholder{
+      img{
+        width: 50px;
+        height: 50px;
+        border-radius: 100%;
+        border: 1px solid black;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+      }
+    //   i{
+    //     width: 50px;
+    //     height: 50px;
+    //     border-radius: 100%;
+    //     background-color: #1AC0A3;
+    //     display: flex;
+    //     align-items: center;
+    //     justify-content: center;
+    //     color: white;
+    //   }
+    }
+    }
   
-  
+    .messageholder{
+        p{
+            margin-top: -10px;
+        }
+    }
+
+    .option{
+        width: 52%;
+        height: 40vh;
+        background-color: rgb(255, 255, 255);
+        box-shadow: 0px 0px 2px rgba($color: #000000, $alpha: 0.5);
+        position: absolute;
+        z-index: 7000;
+        top: 0%;
+        padding: 10px;
+        padding-top: 20px;
+        font-weight: bold;
+        right: 0px;
+      }
+
+    .option2{
+        width: 100%;
+        min-height: 25vh;
+        background-color: rgb(255, 255, 255);
+        position: absolute;
+        box-shadow: 0px 0px 4px rgba($color: #000000, $alpha: 1);
+        z-index: 7000;
+        top: 0px;
+        .d-flex{
+          border-bottom: 1px solid rgb(224, 222, 222);
+          padding: 10px;
+          height: 13vh;
+        i{
+          margin-top: 15px;
+          margin-left: 10px;
+        }
+        input{
+          margin-top: -15px;
+          margin-left: 30px;
+          outline: none;
+          border: none;
+          background-color: transparent;
+          width: 100%;
+        }
+       }
+      }
+      .searchchat{
+        top: 10vh;
+        width: 100%;
+        left: 0px;
+        height: 90vh;
+        background-color: white;
+        box-shadow: 0px 0px 4px black;
+        position: absolute;
+        z-index: 8000;
+        .eachchat{
+          display: flex;
+          justify-content: space-between;
+          padding: 5px;
+          margin-bottom: 10px;
+          border-bottom: 1px solid rgba(0,0, 0, 0.1);
+          .picholder{
+            img{
+              width: 60px;
+              height: 60px;
+              border-radius: 100%;
+            }
+          }
+          .messageholder{
+            margin-left: -45px;
+            .mychat{
+             margin-top: -10px;
+            }
+            h2{
+              margin-left: -50px;
+            }
+          }
+        }
+      }
