--- a/src/app/room/room.page.scss
+++ b/src/app/room/room.page.scss
@@ -39,19 +39,20 @@
           }
     }
     .bodymessage{
-        height: 90vh;
+        height: 73vh;
         overflow-y: scroll;
         overflow-x: hidden;
         width: 100%;
         padding-left: 20px;
         padding-right: 20px;
-        margin-top: 80px;
+        margin-top: 40px;
         padding-top: 20px;
         .holdmessage{
-            width: fit-content;
-            box-shadow: 0px 0px 4px rgba($color: #000000, $alpha: 0.7);
+            width: 80%;
+            box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
             margin-bottom: 20px;
             background-color: white;
+            border: 1px solid rgb(116, 114, 114);
             position: relative;
             padding: 20px;
             .p{
@@ -63,7 +64,7 @@
                 position: absolute;
                 right: 50px;
                 top: 64%;
-                left: 30%;
+                left: 37%;
                 .fat{
                     margin-left: -3px;
                     position: absolute;
